[package]
name = "hydroper_jet_parser_tester"
version = "0.1.0"
edition = "2021"
authors = ["hydroper <matheusdiasdesouzads@gmail.com>"]
repository = "https://github.com/hydroper-jet/compiler"
keywords = ["hydroper-jet", "compiler"]
description = "Hydroper Jet Language Parser Player"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "hydroper_jet_parser_tester"
path = "main.rs"

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
file_paths = "1.0.0"
hydroper_jet_compiler = { path = "../compiler", version = "0.2" }
maplit = "1.0.2"
serde = { version = "1.0.192", features = ["rc", "derive"] }
serde_json = "1.0.108"
